--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     - primary meta tags
   -->
   <title>InnovoPet</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
-  <meta name="description" content="This is a Restaurant html template made by codewithsadee">
+  <meta name="title" content="InnovoPet">
+  <meta name="description" content="Прочность, рождённая природой">
 
   <!-- 
     - favicon
@@ -143,7 +143,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#menu" class="navbar-link hover-underline">
+            <a href="#footer" class="navbar-link hover-underline">
               <div class="separator"></div>
 
               <span class="span">Контакты</span>
@@ -151,7 +151,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link hover-underline">
+            <a href="#charac" class="navbar-link hover-underline">
               <div class="separator"></div>
 
               <span class="span">Технические характеристики</span>
@@ -383,7 +383,7 @@
 
 
 <!-- HELP -->
-<section class="specs-section">
+<section id="charac" class="specs-section">
   <h2>Физико-механические показатели</h2>
   <div class="specs-grid">
     <div class="spec-card">
@@ -438,7 +438,7 @@
     - #FOOTER
   -->
 
-  <footer class="footer section has-bg-image text-center"
+  <footer id="footer" class="footer section has-bg-image text-center"
     style="background-image: url('./assets/images/back.jpg')">
     <div class="container">
 
